--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(Opticks)
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules") 
 set(OptiX_INSTALL_DIR "/Developer/OptiX" CACHE PATH "Path to OptiX installed location.")
 
+set(OPTICKS_CUDA_VERSION 5.5)
+set(OPTICKS_OPTIX_VERSION 3.5)
+
 set(SUPERBUILD ON)
 
 include(CTest)
@@ -22,12 +25,19 @@ add_subdirectory(graphics/assimprap)
 add_subdirectory(graphics/openmeshrap)  
 add_subdirectory(graphics/oglrap)       
 
-if(WITH_OPTIX)
+find_package(CUDA ${OPTICKS_CUDA_VERSION})
+find_package(OptiX ${OPTICKS_OPTIX_VERSION})
+
+if(CUDA_FOUND AND OptiX_FOUND)
+    set(WITH_OPTIX ON)
     add_subdirectory(cuda/cudarap)        
     add_subdirectory(numerics/thrustrap)
     add_subdirectory(graphics/optixrap)
     add_subdirectory(opticksop)
     add_subdirectory(opticksgl)
+else(CUDA_FOUND AND OptiX_FOUND)
+    set(WITH_OPTIX OFF)
+    message("Failed to find at least CUDA ${OPTICKS_CUDA_VERSION} and OptiX ${OPTICKS_OPTIX_VERSION} : proceeding with viz only configure.") 
 endif()
 
 add_subdirectory(graphics/ggeoview)
