--- a/cuda/cudarap/CMakeLists.txt
+++ b/cuda/cudarap/CMakeLists.txt
@@ -5,7 +5,7 @@ project(${name})
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
 
-find_package(CUDA 2.3 REQUIRED)
+find_package(CUDA ${OPTICKS_CUDA_VERSION} REQUIRED)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
