--- a/cmakecheck/CMakeLists.txt
+++ b/cmakecheck/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
-# cmakex-;cmakex-check
+# cmakecheck-;cmakecheck-cmake
 
 project(Check)
 
@@ -7,15 +7,25 @@ project(Check)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/Modules") 
 set(OptiX_INSTALL_DIR "/Developer/OptiX" CACHE PATH "Path to OptiX installed location.")
 set(SUPERBUILD ON)
+option(DUMP ON)
 
 include(EnvBuildOptions)
 
-find_package(OpticksBoost REQUIRED)
-
+find_package(CUDA REQUIRED)
 #find_package(OptiX REQUIRED)
-#message("OptiX_LIBRARIES:${OptiX_LIBRARIES}")
+#find_package(OpticksBoost REQUIRED)
 
-set(DUMP ON)
+if(Optix_FOUND)
+   message("OptiX_LIBRARIES:${OptiX_LIBRARIES}")
+endif(Optix_FOUND)
+
+if(CUDA_FOUND)
+   message("CUDA_LIBRARIES:${CUDA_LIBRARIES}")
+endif(CUDA_FOUND)
+
+
+
+
 if(DUMP)
     get_cmake_property(_variableNames VARIABLES)
     foreach (_variableName ${_variableNames})
