avoid repeatedly/verbosely finding boost using global properties, looking into the sometimes missing debug symbols

--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -242,4 +242,6 @@ install(TARGETS ${name}    DESTINATION bin)
 install(FILES ${hdrs}   DESTINATION include/${name})
 
 
-add_subdirectory(tests EXCLUDE_FROM_ALL)
+#add_subdirectory(tests EXCLUDE_FROM_ALL)
+add_subdirectory(tests)
+
