--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -160,6 +160,7 @@ target_link_libraries(${name} ${LIBRARIES})
 install(TARGETS ${name} LIBRARY DESTINATION lib)
 install(FILES ${HEADERS} DESTINATION include/${name})
 
-add_subdirectory(tests EXCLUDE_FROM_ALL)
+#add_subdirectory(tests EXCLUDE_FROM_ALL)
+add_subdirectory(tests)
 
 
