--- a/graphics/openmeshrap/CMakeLists.txt
+++ b/graphics/openmeshrap/CMakeLists.txt
@@ -56,5 +56,7 @@ add_library( ${name}  SHARED ${SOURCES})
 target_link_libraries( ${name}  ${LIBRARIES})
 install(TARGETS ${name} LIBRARY DESTINATION lib)
 install(FILES ${HEADERS} DESTINATION include/${name})
-add_subdirectory(tests EXCLUDE_FROM_ALL)
+
+#add_subdirectory(tests EXCLUDE_FROM_ALL)
+add_subdirectory(tests)
 
