add GDML handling to g4- on D, add cg4-/CGDMLDetector but find old GDML exports lack material props, checking export on G5 looks like need DYBX

--- a/optix/cfg4/CMakeLists.txt
+++ b/optix/cfg4/CMakeLists.txt
@@ -79,6 +79,7 @@ CSource.cc
 OpStatus.cc
 PhysicsList.cc
 CDetector.cc
+CGDMLDetector.cc
 CMaker.cc
 CPropLib.cc
 CTraverser.cc
@@ -99,6 +100,7 @@ CSource.hh
 OpStatus.hh
 PhysicsList.hh
 CDetector.hh
+CGDMLDetector.hh
 CMaker.hh
 CPropLib.hh
 CTraverser.hh
