--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -4,6 +4,9 @@ project(${name})
 
 file(GLOB TEST_CC_SRCS "*Test.cc")
 
+
+
+
 foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
@@ -11,10 +14,16 @@ foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     add_test(${name}.${TGT} ${TGT})
     add_dependencies(check ${TGT})
 
-
     target_link_libraries(${TGT} 
                ${LIBRARIES} OpticksCore
     )
     install(TARGETS ${TGT} DESTINATION bin)
 endforeach()
+
+
+# cmakex-
+set_property(TEST ${name}.OpticksResourceTest PROPERTY ENVIRONMENT 
+   "OPTICKS_GEOKEY=DAE_NAME_SPANNER"
+   "DAE_NAME_SPANNER=/tmp/spanner_in_works.dae"
+ )
 
