workaround lack of material property tables in vintage GDML exports by adding the MPT derived from the G4DAE export

--- a/optix/cfg4/CMakeLists.txt
+++ b/optix/cfg4/CMakeLists.txt
@@ -78,7 +78,7 @@ State.cc
 CSource.cc
 OpStatus.cc
 PhysicsList.cc
-CDetector.cc
+CTestDetector.cc
 CGDMLDetector.cc
 CMaker.cc
 CPropLib.cc
@@ -99,7 +99,7 @@ State.hh
 CSource.hh
 OpStatus.hh
 PhysicsList.hh
-CDetector.hh
+CTestDetector.hh
 CGDMLDetector.hh
 CMaker.hh
 CPropLib.hh
