material property debug, extra props stomped on RINDEX and GROUPVEL kludge had a generational issue

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -44,7 +44,7 @@ add_definitions(${DEFINITIONS})
 
 
 set(SOURCES
-
+    GConstant.cc
     GProperty.cc
     GDomain.cc
     GAry.cc
@@ -100,7 +100,7 @@ set(SOURCES
 
 
 SET(HEADERS
-
+    GConstant.hh
     GGeo.hh
     GGeoCfg.hh
     GMaterial.hh
