material properties debug

--- a/optix/cfg4/CMakeLists.txt
+++ b/optix/cfg4/CMakeLists.txt
@@ -70,6 +70,7 @@ add_definitions(${DEFINITIONS})
 
 add_library(${name} SHARED 
 CG4.cc
+CMPT.cc
 Format.cc
 Recorder.cc
 Rec.cc
@@ -97,6 +98,7 @@ SteppingVerbose.cc
 
 SET(hdrs 
 CG4.hh
+CMPT.hh
 Format.hh
 Recorder.hh
 Rec.hh
