integrating CG4 dynamically collected Geant4 nopstep, photons and records with Opticks GPU indexing and visualization

--- a/optix/cfg4/CMakeLists.txt
+++ b/optix/cfg4/CMakeLists.txt
@@ -71,6 +71,7 @@ add_definitions(${DEFINITIONS})
 add_library(${name} SHARED 
 CG4.cc
 CMPT.cc
+CTrack.cc
 Format.cc
 Recorder.cc
 Rec.cc
@@ -101,6 +102,7 @@ SteppingVerbose.cc
 SET(hdrs 
 CG4.hh
 CMPT.hh
+CTrack.hh
 Format.hh
 Recorder.hh
 Rec.hh
