g4/op integration notes, migrate OPTICKS_QUERY parsing from assimprap- to optickscore- for use with GDML geometry as well as DAE geometry, needed for CGDMLDetector extents

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -42,6 +42,7 @@ set(LIBRARIES
 
 add_library( ${name}  SHARED
     OpticksResource.cc
+    OpticksQuery.cc
     Opticks.cc
     OpticksCfg.cc
 
@@ -70,6 +71,7 @@ add_library( ${name}  SHARED
 
 SET(hdrs 
     OpticksResource.hh
+    OpticksQuery.hh
     Opticks.hh
     OpticksCfg.hh
 
