geo node selection into OpticksQuery for use from both AssimpSelection and CGDMLDetector/CTraverser, bounding into npy-/NBoundingBox

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -80,6 +80,7 @@ add_library( ${name}  SHARED
     NQuad.cpp
     NPart.cpp
     NPrism.cpp
+    NBoundingBox.cpp
     NTesselate.cpp
     NTriangle.cpp
     NTrianglesNPY.cpp
@@ -143,6 +144,7 @@ NPlane.hpp
 NQuad.hpp
 NPart.hpp
 NPrism.hpp
+NBoundingBox.hpp
 NTesselate.hpp
 NTriangle.hpp
 NTrianglesNPY.hpp
