fix broken photon record viz due to bad offsets, adopt NPYSpec for specification of NPY shapes to avoid duplication

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -42,6 +42,7 @@ add_library( ${name}  SHARED
     NPYBase.cpp
     NPY.cpp
     ViewNPY.cpp
+    NPYSpec.cpp
     MultiViewNPY.cpp
     GLMPrint.cpp
     GLMFormat.cpp
@@ -107,6 +108,7 @@ GLMFormat.hpp
 NPYBase.hpp
 NPY.hpp
 ViewNPY.hpp
+NPYSpec.hpp
 MultiViewNPY.hpp
 G4StepNPY.hpp
 TorchStepNPY.hpp
