--- a/numerics/thrustrap/CMakeLists.txt
+++ b/numerics/thrustrap/CMakeLists.txt
@@ -53,5 +53,5 @@ SET(HEADERS
 install(TARGETS ${name} DESTINATION lib)
 install(FILES ${HEADERS} DESTINATION include/${name})
 
-#add_subdirectory(tests EXCLUDE_FROM_ALL)
-add_subdirectory(tests)
+add_subdirectory(tests EXCLUDE_FROM_ALL)
+#add_subdirectory(tests)
