--- a/boost/bregex/CMakeLists.txt
+++ b/boost/bregex/CMakeLists.txt
@@ -32,7 +32,7 @@ SET(hdrs
 )
 
 
-install(TARGETS ${name} LIBRARY DESTINATION lib)
+install(TARGETS ${name} DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include/${name})
 
 #add_subdirectory(tests EXCLUDE_FROM_ALL)
