--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ add_subdirectory(optickscore)
 add_subdirectory(optix/ggeo)     
 add_subdirectory(graphics/assimprap)   
 add_subdirectory(graphics/openmeshrap)  
+add_subdirectory(opticksgeo)  
+
 add_subdirectory(graphics/oglrap)       
 
 find_package(CUDA ${OPTICKS_CUDA_VERSION})
