reorganize/consolidate low level config, logging, fileutils code depending only in boost into BoostRap brap-

--- a/boost/bregex/CMakeLists.txt
+++ b/boost/bregex/CMakeLists.txt
@@ -22,14 +22,16 @@ add_definitions(
 set(SOURCES
    regexsearch.cc
    fsutil.cc 
-   NLog.cpp
+   BLog.cc
+   BCfg.cc
 ) 
 
 set(HEADERS
    regexsearch.hh
    fsutil.hh 
    dbg.hh
-   NLog.hpp
+   BLog.hh
+   BCfg.hh
 )
 
 
